# metalldata

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  COPYRIGHT  LICENSE  README.md  generate_docs.py
bench/: CMakeLists.txt  README.md  add_series_cmd.hpp  count_cmd.hpp  distinct.hpp  distinct_cmd.hpp  erase_keys_cmd.hpp  filter_to_parquet_cmd.hpp  gen_faker_cmd.hpp  gen_uuids.hpp  ingest_cmd.hpp  mframe_bench.cpp  mframe_bench.hpp  partition_test_cmd.hpp  peek.hpp  peek_cmd.hpp  remove_if2_cmd.hpp  remove_if_cmd.hpp  test_subcommand.cpp  ygm_test_cmd.hpp
examples/parquet_export/: CMakeLists.txt  parquet_writer.cpp  parquet_writer.hpp  parquet_writer_example.cpp  test_parquet_writer.cpp  test_parquet_writer_simple.cpp
include/parquet_writer/: CMakeLists.txt  parquet_writer.cpp  parquet_writer.hpp  parquet_writer.ipp  parquet_writer_example.cpp
src/: CMakeLists.txt
src/Graph/: CMakeLists.txt  Graph.hpp  __init__.cpp  add.cpp  meta.json  size.cpp
src/JsonLines/: CMakeLists.txt
src/MetallFrame/: CMakeLists.txt  clippy-log.hpp  csv-line-io.hpp  dataframe.hpp  df-clear.cpp  df-common.hpp  df-count.cpp  df-getitem.cpp  df-head.cpp  df-info.cpp  df-init.cpp  df-merge.cpp  df-read_json.cpp  df-set.cpp  metall_frame.hpp  mf-clear.cpp  mf-common.hpp  mf-count.cpp  mf-eval.cpp  mf-getitem.cpp  mf-head.cpp  mf-info.cpp  mf-init.cpp  mf-merge.cpp  mf-read_csv.cpp  mf-read_json.cpp  mf-set.cpp
src/MetallFrame2/: df-clear.cpp  df-info.cpp  df-init.cpp  df-merge.cpp  df-read_json.cpp  df-set.cpp
src/MetallGraph/: CMakeLists.txt  MetallGraph.hpp  __init__.cpp  add_faker.cpp  assign.cpp  debug.cpp  describe.cpp  drop_series.cpp  dump_parquet_edges.cpp  dump_parquet_nodes.cpp  erase_edges.cpp  ingest_parquet_edges.cpp  metall_graph.cpp  metall_graph.hpp  metall_graph_assign.cpp  metall_graph_dump_parquet.cpp  metall_graph_erase.cpp  metall_graph_faker.ipp  metall_graph_where.cpp  mg-bfs.cpp  mg-cc.cpp  mg-common.hpp  mg-count.cpp  mg-count_degree.cpp  mg-count_lines.cpp  mg-dump.cpp  mg-getitem.cpp  mg-hist.cpp  mg-init.cpp  mg-kcore.cpp  mg-read_edges.cpp  mg-read_json.cpp  mg-read_vertices.cpp  nhops.cpp  parquet_bench.cpp  read_edges.cpp  select_edges.cpp  select_nodes.cpp  utils.hpp  welcome.cpp
src/MetallJsonLines/: CMakeLists.txt  MetallJsonLines-merge.hpp  MetallJsonLines.hpp  mjl-clear.cpp  mjl-common.hpp  mjl-count.cpp  mjl-getitem.cpp  mjl-head.cpp  mjl-hist.cpp  mjl-info.cpp  mjl-init.cpp  mjl-merge.cpp  mjl-read_json.cpp  mjl-set.cpp
src/bench/: CMakeLists.txt  README.md  distinct_cmd.hpp  erase_keys_cmd.hpp  filter_to_parquet_cmd.hpp  gen_faker_cmd.hpp  gen_uuids_cmd.hpp  ingest_cmd.hpp  mframe_bench.cpp  mframe_bench.hpp  peek_cmd.hpp  remove_if2_cmd.hpp  remove_if_cmd.hpp  rm_cmd.hpp  subcommand.hpp  welcome_cmd.hpp  ygm_test_cmd.hpp
src/cli_utils/: CMakeLists.txt
src/cli_utils/mg2csv/: CMakeLists.txt  README.md  mg2csv.cpp
src/cli_utils/pq2mg/: CMakeLists.txt  README.md  pq2mg.cpp
src/clippy/: CMakeLists.txt
src/clippy/MetallGraph/: CMakeLists.txt  assign.cpp  (+28 more)
src/examples/: CMakeLists.txt
src/libmetalldata/: CMakeLists.txt  metall_graph.cpp  metall_graph_assign.cpp  metall_graph_cc.cpp  metall_graph_degree.cpp  metall_graph_dump_parquet.cpp  metall_graph_erase.cpp  metall_graph_indexing.cpp  metall_graph_ingest.cpp  metall_graph_locator.cpp  metall_graph_nhops.cpp  metall_graph_nunique.cpp  metall_graph_priv_where_subgraph.cpp  metall_graph_sample.cpp  metall_graph_select.cpp  metall_graph_series.cpp  metall_graph_value_counts.cpp  metall_graph_where.cpp  utils.hpp
src/multiseries/: CMakeLists.txt  const_reddit_compact_string_store.cpp  const_reddit_multiseries_record.cpp  find_max.cpp  ingest_parquet.cpp
test/: CMakeLists.txt
test/clippy/: README.txt  pytest.ini  requirements-dev.txt  requirements.txt  test_mg.py
test/metall_graph/: CMakeLists.txt  README_show_stats.md  show_metall_graph_stats.cpp  test_assign.cpp  test_degrees.cpp  test_ingest_parquet_edges.cpp  test_metall_graph.cpp
test/multiseries/: CMakeLists.txt  test_multiseries_record.cpp
test/parquet_writer/: CMakeLists.txt  test_parquet_writer.cpp
test/string_table/: CMakeLists.txt  test_string_accessor.cpp  test_string_store.cpp
test/ygm_ext/: CMakeLists.txt  test_simple_edgelist.cpp  test_static_graph.cpp
tests/: CMakeLists.txt  run_test.sh
tests/expected/: mg-count-0.exp  mg-count-1.exp  mg-count-selected.exp  mg-count_lines-selected.exp  mg-init.exp  mg-read_edges.exp  mg-read_vertices.exp  mg-softcom-cc.exp  mg-softcom-count_lines.exp  mg-softcom-init.exp  mg-softcom-read_edges.exp  mjl-count-names.exp  mjl-head-names.exp  mjl-head-selected_places.out  mjl-info-selected_places.exp  mjl-info-selected_places.out  mjl-init-names.exp  mjl-init-names.out  mjl-init-places.exp  mjl-init-places.out  mjl-init-results.exp  mjl-init-results.out  mjl-read_json-places.exp  mjl-read_json-places.out
tests/inputs/: mg-count-1.json  mg-count-selected.json  mg-init.json  mg-read_edges.json  mg-read_json.json  mg-read_vertices.json  mg-softcom-cc.json  mg-softcom-init.json  mg-softcom-read_edges.json  mjl-head-names.json  mjl-head-selected_places.json  mjl-info-selected_places.json  mjl-init-names.json  mjl-init-places.json  mjl-init-results.json  mjl-merge.json  mjl-read_json-names.json  mjl-read_json-places.json
tests/json_bento/: CMakeLists.txt  test_array_accessor.cpp  test_box.cpp  test_compact_adjacency_list.cpp  test_compact_string_storage.cpp  test_compact_vector.cpp  test_data_storage.cpp  test_key_store.cpp  test_object_accessor.cpp  test_string_accessor.cpp  test_value_accessor.cpp  test_value_from.cpp  test_value_locator.cpp  test_value_to.cpp  test_vector.cpp
tests/metall_graph/: CMakeLists.txt  README_show_stats.md  show_metall_graph_stats.cpp  test_assign.cpp  test_degrees.cpp  test_ingest_parquet_edges.cpp  test_metall_graph.cpp
tests/multiseries/: CMakeLists.txt  test_multiseries_record.cpp
tests/parquet_writer/: CMakeLists.txt
tests/string_table/: test_string_store.cpp
utils/mg2csv/: CMakeLists.txt  mg2csv.cpp
utils/pq2mg/: CMakeLists.txt  pq2mg.cpp
(+181 files in other folders)
