# Copyright 2020 Lawrence Livermore National Security, LLC and other CLIPPy
# Project Developers. See the top-level COPYRIGHT file for details.
#
# SPDX-License-Identifier: MIT

add_subdirectory(MetallJsonLines)
add_subdirectory(MetallGraph)
#~ add_subdirectory(MetallFrame)
#~ add_subdirectory(util)

