# Copyright 2025 Lawrence Livermore National Security, LLC and other CLIPPy
# Project Developers. See the top-level COPYRIGHT file for details.
#
# SPDX-License-Identifier: MIT

add_subdirectory(libmetalldata)
add_subdirectory(clippy)
add_subdirectory(cli_utils)
add_subdirectory(bench)
add_subdirectory(examples)
